# dbaudit

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dbaudit/: cli.py  connector.py  models.py  reporter.py
dbaudit/checks/: __init__.py  columns.py  config.py  permissions.py  users.py
